# IGoR

./: .clang-format  .gdbinit  .gitignore  .gitmodules  AA_PGEN_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CIGAR_implementation_conclusion.md  CIGAR_plan.md  CMakeLists.txt  FOLLOW_UP.md  GENERATION_ALGORITHM_MIGRATION_ANALYSIS.md  GENMODEL_ANALYSIS.md  MARGINALS_MIGRATION_PLAN.md  MARGINALS_REFACTORING_DESIGN.md  MATH_MODULE_TASK_PLAN.md  MIGRATION_STATUS.md  MINIMAL_LINALG_PROPOSAL.md  MODELIO_TASK_PLAN.md  MODEL_ARCHITECTURE_REVIEW.md  MODEL_PARMS_REFACTORING_PROPOSAL.md  PHASE2_VALIDATION_PLAN.md  README.md  REC_EVENT_ARCHITECTURE_ANALYSIS.md  REC_EVENT_ARCHITECTURE_REVIEW.md  SOLUTION.md  STATE.md  STREAMING_TASK_PLAN.md  TASK_1_REPORT.md  TASK_2_REPORT.md  TENSOR_LAYOUT_COMPLEXITY_ANALYSIS.md  TENSOR_LINALG_PROPOSAL_V2.md  VALIDATION_WORK_SUMMARY.md  XTENSOR_COMPARISON.md  pixi.toml  val_genomicDs.fasta  val_genomicJs.fasta  val_genomicVs.fasta
app/igor/: CMakeLists.txt  legacy_main.cpp  main.cpp  sha256.h  sha256_openssl.h
app/igor-convert/: CMakeLists.txt  README.md  igor-convert.cpp
doc/: CMakeLists.txt  Doxyfile.in  FAST_GENERATION_BENCHMARK.md  FastGeneratorReport.md  GENERATION_ALGORITHM.md  GENE_CLASS_SEQ_TYPE_PLAN_STATUS.md  RECOMBINATION_MODEL_PLAN.md  deletion_identity_matrix.md  implementation_plan.md
src/igor/Core/: AccumulationContext.h  Aligner.cpp  Aligner.h  AlignmentPreset.h  Bestscenarioscounter.cpp  Bestscenarioscounter.h  CDR3SeqData.cpp  CDR3SeqData.h  CMakeLists.txt  Config.h.in  Counter.cpp  Counter.h  Coverageerrcounter.cpp  Coverageerrcounter.h  Deletion.cpp  Deletion.h  Dinuclmarkov.cpp  Dinuclmarkov.h  DynamicSequenceMap.h  Errorrate.cpp  Errorrate.h  Errorscounter.cpp  Errorscounter.h  EventUtils.cpp  EventUtils.h  ExplorationContext.h  ExtractFeatures.cpp  ExtractFeatures.h  FastGenerator.cpp  FastGenerator.h  FastMemoryMap.h  FastSampler.h  FastSampling.cpp  FastSampling.h  GenModel.cpp  GenModel.h  Genechoice.cpp  Genechoice.h  HypermutationfullNmererrorrate.cpp  HypermutationfullNmererrorrate.h  (+35 more)
src/igor/Math/: CMakeLists.txt  HybridBuffer.h  HybridBuffer.tpp  Linalg.h  Linalg.tpp  MdspanCompat.h  README.md  Tensor.h  Tensor.tpp  TensorCreation.h  TensorCreation.tpp
src/igor/Model/: CMakeLists.txt  CategoricalHandler.h  CategoricalHandler.tpp  CategoricalInferenceHandler.h  CategoricalInferenceHandler.tpp  CategoricalSamplingHandler.h  CategoricalSamplingHandler.tpp  EventFactory.cpp  EventFactory.h  InferenceEngine.h  InferenceEngine.tpp  InferenceHandler.h  InferenceHandlerFactory.cpp  InferenceHandlerFactory.h  InferenceHandlerFactory.tpp  LegacyBridge.h  LegacyBridge.tpp  MarginalHandler.h  MarkovHandler.h  MarkovHandler.tpp  MarkovInferenceHandler.h  MarkovInferenceHandler.tpp  MarkovSamplingHandler.h  MarkovSamplingHandler.tpp  Navigator.h  README.md  RecombinationModel.h  RecombinationModel.tpp  SamplingEngine.h  SamplingEngine.tpp  SamplingHandler.h  SamplingHandler.tpp  SamplingHandlerFactory.cpp  SamplingHandlerFactory.h  SamplingHandlerFactory.tpp  Scenario.h  Topology.cpp  Topology.h
src/igor/ModelIO/: CMakeLists.txt  ModelIOCommon.h  ModelReader.cpp  ModelReader.h  ModelWriter.cpp  ModelWriter.h
src/igor/Streaming/: AIRRAlignmentReader.cpp  AIRRAlignmentReader.h  AIRRAlignmentWriter.cpp  AIRRAlignmentWriter.h  AIRRCommon.cpp  AIRRCommon.h  AIRRReader.cpp  AIRRReader.h  AIRRRearrangementReader.cpp  AIRRRearrangementReader.h  AIRRRearrangementWriter.cpp  AIRRRearrangementWriter.h  AIRRWriter.cpp  AIRRWriter.h  ArrowCompatibility.h  CMakeLists.txt  ParquetReader.cpp  ParquetReader.h  ParquetWriter.cpp  ParquetWriter.h  README.md  SequenceBatchHelpers.cpp  SequenceBatchHelpers.h  Task_6_Streaming_Architecture.md
src/igor/ZeroCopy/: Aligner.cpp  Aligner.h  AlignmentView.cpp  AlignmentView.h  CMakeLists.txt  Model_marginals.cpp  Model_marginals.h  ScoreView.cpp  ScoreView.h  SequenceView.cpp  SequenceView.h  ZeroCopy_Features.md
tst/: CMakeLists.txt  bench_seqan2_vs_igor.cpp  entropy_test_helpers.h  test_Contexts.cpp  test_Deletion.cpp  test_DynamicSequenceMap.cpp  test_EventUtils.cpp  test_EventUtils.cpp.bak  test_SequenceTypes.cpp  test_TandemD.cpp.bak  test_aligner.cpp  test_alignment_cigar.cpp  test_alignment_preset.cpp  test_band_calibration.cpp  test_events.cpp  test_fast_generator_benchmark.cpp  test_fast_sampler.cpp  test_fast_sampling.cpp  test_gene_choice_iterate.cpp  test_generation.cpp  test_inference.cpp  test_model_format_v2.cpp  test_phase1_rng_equivalence.cpp  test_sanity.cpp  test_seqan2_aligner.cpp  test_utils.h
tst/igor/: entropy_test_helpers.h  igor_test_helpers.h
tst/igor/Core/: AlignerTestUtils.cpp  AlignerTestUtils.h  CMakeLists.txt  test_Contexts.cpp  test_EventUtils.cpp  test_LegacyBridge.cpp  test_aa_pgen.cpp  test_aa_pgen_bugs.cpp  test_aligner.cpp  test_alignment_cigar.cpp  test_gene_choice_iterate.cpp  test_generation.cpp  test_inference.cpp  test_platform_diagnostic.cpp  test_poc.cpp  test_utils.cpp  test_utils.h
tst/igor/Integration/: ParallelRecursion.h  test_ParallelEM.cpp  test_SideBySideEM.cpp
tst/igor/Math/: CMakeLists.txt  TestHelpers.h  test_HybridBuffer.cpp  test_Linalg_AxisOps.cpp  test_Linalg_Basic.cpp  test_Linalg_Broadcast.cpp  test_Linalg_Probabilistic.cpp  test_Tensor.cpp  test_TensorCreation.cpp  test_TensorOps.cpp  test_Tensor_Slicing.cpp
tst/igor/Model/: CMakeLists.txt  test_EventFactory.cpp  test_Handlers.cpp  test_InferenceEngine.cpp  test_InferenceHandlers.cpp  test_LegacyBridge.cpp  test_ModelInference.cpp  test_NormalizationCompareLegacy.cpp  test_RecombinationModel.cpp  test_SamplingEngine.cpp  test_SamplingHandlers.cpp  test_Topology.cpp
tst/igor/ModelIO/: CMakeLists.txt  ModelIOTestUtils.h  test_model_structure.cpp
tst/igor/Streaming/: CMakeLists.txt  StreamingTestUtils.cpp  StreamingTestUtils.h  test_airr_alignment.cpp  test_airr_reader.cpp  test_airr_rearrangement_reader.cpp  test_airr_rearrangement_writer.cpp  test_airr_writer.cpp  test_parquet_reader.cpp  test_parquet_writer.cpp  test_streaming_helpers.cpp
tst/utils/: CMakeLists.txt  test_sha256.cpp
(+123 files in other folders)
